# vulkan-project

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  app.cpp  app.hpp  lib.cpp  lib.h  lib.hpp  main.cpp  main.frag  pipeline.cpp  pipeline.hpp  vma_usage.cpp
shaders/: main.frag  main.vert
